--- a/streamer/Gopkg.toml
+++ b/streamer/Gopkg.toml
@@ -38,7 +38,7 @@
   version = "2.1.0"
 
 [[constraint]]
-  name = "github.com/sirupsen/logrus"
+  name = "github.com/akuan/logrus"
   version = "1.4.2"
 
 [prune]
